# QT_SongApp

./: AudioInfoBox.qml  CMakeLists.txt  Main.qml  SearchPanel.qml  audioinfo.cpp  audioinfo.h  audiosearchmodel.cpp  audiosearchmodel.h  main.cpp  playercontroller.cpp  playercontroller.h
